2009-08-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11747: Performance improvement: speed up list module by improving internal handling of references
	* Fixed bug #11699: Menu entries in template modules miss translation (Thanks to Christopher Stelmaszyk)

2009-08-20  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11726: File list tree-<ul> lacks id="treeRoot" (thanks to Steffen Gebert)

2009-08-19  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11746: Performance improvement: speed up function t3lib_BEfunc::isRecordLocked()

2009-08-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11716: Install Tool always sets TYPO3_CONF_VARS[FE][disableNoCacheParameter] upon save

2009-08-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11476: Redundant rendering of helpTextIcon in TCEforms

2009-08-18  Francois Suter  <francois@typo3.org>

	* Follow-up to #11373, #11379, #11408: Removed unnecessary use of second parameter in calls to $GLOBALS['LANG']->getLL()
	* Code cleanup #11745: Class tx_tstemplateinfo misses phpdoc declaration and SVN Id keyword placeholder
	* Fixed bug #11659: Hardcoded labels in backend.php and alt_menu.php (Thanks to Christopher Stelmaszyk)

2009-08-14  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11718: Performance improvement: speed up function t3lib_iconWorks::skinImg() by caching the results
	* Fixed bug #11722: Performance improvement: speed up function t3lib_BEfunc::selectVersionsOfRecord
	* Follow-up to feature #11474: Updated performance section in NEWS.txt

2009-08-14  Ingo Renner  <ingo@typo3.org>

	* Added feature #11438: Add a registry to t3lib
	* Added missing icon in t3skin for the divider content element
	* Fixed bug #11724: Icons in List Module aligned badly

2009-08-14  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8968: DBAL incompatible SQL in "impexp" extension (thanks to Marc Bastian Heinrichs)

2009-08-14  Francois Suter  <francois@typo3.org>
